true json context

--- a/WebApplication2/Pages/portfolio.cshtml
+++ b/WebApplication2/Pages/portfolio.cshtml
@@ -30,7 +30,7 @@
 
         <div class="container-fluid">
         @{
-            var portfolios = PortfolioModel.GetPortfolios();
+            var portfolios = Model.portfolios;
         }
         <div class="row">
                 <div class="col-md-12">
